src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail14.jova
class Test{

    public bool main() {

    return 0;
    }
}

class Main {

  private int main() {

    return 0;
  }

}